# ChangeLog for net-zope/btreefolder2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/btreefolder2/ChangeLog,v 1.15 2011/03/08 16:29:19 arfrever Exp $

*btreefolder2-2.13.2 (08 Mar 2011)

  08 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -btreefolder2-2.13.1.ebuild, +btreefolder2-2.13.2.ebuild:
  Version bump.

  20 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  btreefolder2-2.13.1.ebuild:
  Update dependencies.

  14 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  btreefolder2-2.13.1.ebuild:
  marked ~ppc wrt #351612

*btreefolder2-2.13.1 (19 Sep 2010)

  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -btreefolder2-0.5.0.ebuild, -btreefolder2-1.0.ebuild,
  -btreefolder2-1.0.1.ebuild, +btreefolder2-2.13.1.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS.

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  02 Apr 2005; Simon Stelling <blubb@gentoo.org> btreefolder2-1.0.1.ebuild:
  added ~amd64

  19 Mar 2005; Jason Wever <weeve@gentoo.org> btreefolder2-1.0.1.ebuild:
  Added ~sparc keyword wrt bug #84791.

  24 Sep 2004; Jodok Batlogg <batlogg@gentoo.org>; btreefolder2-1.0.1.ebuild:
  marked stable

*btreefolder2-1.0.1 (11 Sep 2004)

  11 Sep 2004; Heinrich Wendel <lanius@gentoo.org> btreefolder2-0.5.0.ebuild,
  +btreefolder2-1.0.1.ebuild, btreefolder2-1.0.ebuild:
  version bump

  27 Mar 2004; Heinrich Wendel <lanius@gentoo.org> btreefolder2-0.5.0.ebuild:
  remove broken ppc keyword

*btreefolder2-1.0 (19 Jan 2004)

  19 Jan 2004; Heinrich Wendel <lanius@gentoo.org> btreefolder2-1.0.ebuild:
  version bump

*btreefolder2-0.5.0 (27 Feb 2003)

  18 Jun 2003; Jason Shoemaker <kutsuya@gentoo.org> btreefolder2-0.5.0.ebuild:
  ~ppc -> ppc

  03 Apr 2003; Jason Shoemaker <kutsuya@gentoo.org> btreefolder2-0.5.0.ebuild:
  ~x86 -> x86 and added ~ppc. Changed description.
