@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/btreefolder2
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/btreefolder2/ChangeLog,v 1.15 2011/03/08 16:29:19 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/btreefolder2/ChangeLog,v 1.16 2011/03/26 17:43:32 arfrever Exp $
+
+*btreefolder2-2.13.3 (26 Mar 2011)
+
+  26 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +btreefolder2-2.13.3.ebuild:
+  Version bump.
 
 *btreefolder2-2.13.2 (08 Mar 2011)
 
